Implement updating education path (without auth at the moment)
